[refactor] authors/institutions statitistics refactored and enriched with answer correctness